IL: Enable anon-module properties for anon-client used in IL flows

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -21,8 +21,8 @@ embedded.activemq.data.path = /opt/data/activemq
 # ANONYMIZATION client properties
 # ----------------------------------------
 
-#anon.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
-#anon.server.host = ${ANON_LOCAL_DOMAIN}
+anon.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+anon.server.host = ${ANON_LOCAL_DOMAIN}
 
 # ----------------------------------------
 # CSP Application data type flows
