Fix /appInfo (new checks) UI set module version name to module name UI set dashboard updates to include version

--- a/csp-apps/configuration/conf-server/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.file.mediaType=application/octet-stream
 #as per the docker module document, it is 'manifest.json' no uppercase
 server.manifest=manifest.json
 h2.db.file = /opt/csp/configuration/conf_db
-#h2.db.file=e:\\0\\h2-tests
+#h2.db.file=e:\\0\\confdb
 
 #
 #  Logging
