SXCSP-284: Authenticate IL UI via custom headers auth

--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -182,3 +182,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 security.basic.enabled=false
+
+enable.oam=true
