Refactoring to use common classes for custom headers auth

--- a/csp-apps/integration-layer/il-server/pom.xml
+++ b/csp-apps/integration-layer/il-server/pom.xml
@@ -163,6 +163,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>libraries-headersauth</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test-spring</artifactId>
             <version>${camel.version}</version>
