--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 # default is create-drop :D
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 
 # CLIENT UI
 client.ui.jiralink=https://jira.intrasoft-intl.com/
