Add 'file:' prefix in jks resource property for anon client (on testbed complains if not using this prefix)

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -21,7 +21,7 @@ embedded.activemq.data.path = /opt/data/activemq
 # ANONYMIZATION client properties
 # ----------------------------------------
 
-anon.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+anon.client.ssl.jks.keystore.password = file:${IL_SSL_KEYSTORE_PASS}
 anon.server.host = ${ANON_LOCAL_DOMAIN}
 
 # ----------------------------------------
