Fix previous commit

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspdefault.properties
@@ -44,7 +44,7 @@ external.ssl.keystore.passphrase = <tbd>
 # ----------------------------------------
 
 anon.client.ssl.enabled = true
-anon.client.ssl.jks.keystore = /opt/ssl/server/csp-internal.jks
+anon.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 anon.client.ssl.jks.keystore.password = 123456
 
 anon.server.protocol = https
