fixes and start stop complete

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -1,15 +1,21 @@
+
 # H2
+client.h2.file=/opt/cspinst/.clientconf
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
 # Datasource
-spring.datasource.url=jdbc:h2:file:/tmp/clientconf;DB_CLOSE_ON_EXIT=FALSE;COMPRESS=TRUE
+spring.datasource.url=jdbc:h2:file:${client.h2.file};DB_CLOSE_ON_EXIT=FALSE;COMPRESS=TRUE
 #spring.datasource.url=jdbc:h2:file:e://0//persistence;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+
 # default is create-drop :D
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 
 # CLIENT UI
