Fix status log scrolling

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 # H2
 client.h2.file=/opt/cspinst/.clientconf
+#client.h2.file=e:\\0\\.clientconf
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
