Authentication using custom headers - OAM

--- a/vcbridge-admin/application/src/main/resources/application-prod.properties
+++ b/vcbridge-admin/application/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
-openfire.videobridgeHost=https://${DOMAIN}
+openfire.videobridgeHost=https://${JITSI_HOST}
 openfire.videobridgeEndpointPort=7443
 openfire.videobridgeAdminPort=${XXXADMINCONSOLESECUREPORTXXX}
 openfire.authUsername=admin
@@ -16,19 +16,21 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 spring.thymeleaf.cache=false
 
 #vcbadmin configuration
-vcbadmin.maxTaskRetries=2
-vcbadmin.emailNotifications.waitAfterSubmission=15
+vcbadmin.maxTaskRetries=${XXXMAXTASKRETRIESXXX}
+vcbadmin.emailNotifications.waitAfterSubmission=${XXXWAITAFTERSUBMISSIONXXX}
 
 # spring-boot-starter-mail properties
-spring.mail.host=smtp.mailgun.org
-spring.mail.port=587
-spring.mail.username=do-not-reply@sastix.com
-spring.mail.password=a!Str-1-3-X2
+spring.mail.host=${XXXMAILSERVERHOSTXXX}
+spring.mail.port=${XXXMAILSERVERPORTXXX}
+spring.mail.username=${XXXMAINUSERNAMEXXX}
+spring.mail.password=${XXXMAILPASSWORDXXX}
 spring.mail.smtp.auth=true
 spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
-spring.mail.properties.mail.smtp.socketFactory.port=587
+spring.mail.properties.mail.smtp.socketFactory.port=${XXXMAILSERVERPORTXXX}
 
 #timezone.default=Europe/Athens
+security.basic.enabled=false
+enable.oam=true
