--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost/vcbridge
+pospring.datasource.url=jdbc:postgresql://localhost/vcbridge
 spring.datasource.username=admin
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -21,15 +21,17 @@ vcbadmin.maxTaskRetries=2
 vcbadmin.emailNotifications.waitAfterSubmission=15
 
 # spring-boot-starter-mail properties
+
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
 spring.mail.username=do-not-reply@sastix.com
 spring.mail.password=a!Str-1-3-X2
-spring.mail.smtp.auth=true
-spring.mail.smtps.quitwait=false
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.socketFactory.port=587
 
 #timezone.default=Europe/Athens
+
+security.basic.enabled=false
+enable.oam=true
