--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -168,6 +168,14 @@
 			<artifactId>bootstrap-fileinput</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars.bower/bootstrap3-dialog -->
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>bootstrap3-dialog</artifactId>
+			<version>1.35.3</version>
+		</dependency>
+
+
 		<!-- Joda -->
 		<dependency>
 			<groupId>joda-time</groupId>
