--- a/csp-apps/anonymization/anon-server/pom.xml
+++ b/csp-apps/anonymization/anon-server/pom.xml
@@ -80,8 +80,16 @@
             <version>4.3.9</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.webjars/jquery-validation -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-validation</artifactId>
+            <version>1.16.0</version>
+        </dependency>
 
-         <!--https://mvnrepository.com/artifact/org.apache.camel/camel-jsonpath-->
+
+
+        <!--https://mvnrepository.com/artifact/org.apache.camel/camel-jsonpath-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jsonpath</artifactId>
