SXCSP-291: Fix Infinite loop redelivery on error-message-handling

--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -24,6 +24,7 @@ consume.errorq.on.interval = true
 consume.errorq.fixed.delay = 3600000
 consume.errorq.initial.delay = 2000
 consume.errorq.message.consumption.delay = 300
+consume.errorq.max.messages = 10
 
 internal.use.ssl = true
 internal.ssl.endpoint.protocol = https4-in
