Fix maximum http upload size for all profiles.

--- a/csp-apps/configuration/conf-server/src/main/resources/application-h2mem.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-h2mem.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
 
+#
+# Spring file upload limits
+#
+spring.http.multipart.maxFileSize=1512MB
+spring.http.multipart.maxRequestSize=1512MB
