--- a/csp-apps/configuration/conf-server/src/main/resources/application-postgres.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-postgres.properties
@@ -6,3 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+
+#
+# Spring file upload limits
+#
+spring.http.multipart.maxFileSize=1512MB
+spring.http.multipart.maxRequestSize=1512MB
