--- a/csp-apps/configuration/conf-server/src/main/resources/application-mysql.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-mysql.properties
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
+#
+# Spring file upload limits
+#
+spring.http.multipart.maxFileSize=1512MB
+spring.http.multipart.maxRequestSize=1512MB
