--- a/csp-apps/configuration/conf-server/src/main/resources/application-tests.properties
+++ b/csp-apps/configuration/conf-server/src/main/resources/application-tests.properties
@@ -10,3 +10,9 @@ spring.h2.console.enabled=true
 
 # JPA / HIBERNATE
 spring.jpa.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#
+# Spring file upload limits
+#
+spring.http.multipart.maxFileSize=1512MB
+spring.http.multipart.maxRequestSize=1512MB
