--- a/csp-apps/integration-layer/il-server/pom.xml
+++ b/csp-apps/integration-layer/il-server/pom.xml
@@ -182,6 +182,12 @@
             <artifactId>anon-client</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
