--- a/csp-apps/pom.xml
+++ b/csp-apps/pom.xml
@@ -23,7 +23,8 @@
 		<module>anonymization</module>
 		<module>configuration</module>
 		<module>libraries</module>
-	</modules>
+        <module>misp</module>
+    </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
