--- a/csp-apps/misp/misp-tests/pom.xml
+++ b/csp-apps/misp/misp-tests/pom.xml
@@ -4,17 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>misp</artifactId>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>configuration</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
-
-    <name>Configuration Integration Tests</name>
+    <name>MISP Integration Tests</name>
     <groupId>com.intrasoft.csp</groupId>
-    <artifactId>conf-integration-tests</artifactId>
+    <artifactId>misp-tests</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
 
     <dependencies>
         <dependency>
@@ -24,15 +24,11 @@
         </dependency>
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
-            <artifactId>conf-server</artifactId>
+            <artifactId>misp-adapter</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.intrasoft.csp</groupId>
-            <artifactId>conf-client</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
 
     </dependencies>
 
