--- a/csp-apps/misp/misp-tests/pom.xml
+++ b/csp-apps/misp/misp-tests/pom.xml
@@ -3,9 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>misp</artifactId>
         <groupId>com.intrasoft.csp</groupId>
+        <artifactId>parent-pom</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
@@ -24,9 +25,8 @@
         </dependency>
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
-            <artifactId>misp-adapter</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
+            <artifactId>misp-client</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
 
 
