--- a/csp-apps/misp/pom.xml
+++ b/csp-apps/misp/pom.xml
@@ -3,22 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.intrasoft.csp</groupId>
         <artifactId>parent-pom</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
-    <name>MISP Emitter/Adapter</name>
+
+    <name>misp</name>
     <groupId>com.intrasoft.csp</groupId>
     <artifactId>misp</artifactId>
     <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>misp-adapter</module>
-        <module>misp-emitter</module>
+        <module>misp-client</module>
         <module>misp-commons</module>
         <module>misp-tests</module>
     </modules>
