--- a/csp-apps/misp/misp-client/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-client/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 misp.app.protocol = http
-misp.app.host = localhost
-misp.app.port = 8181
+misp.app.host = http://misp.dimitris.dk
+misp.app.port = 80
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
 misp.app.events.path=events
