MISP: adapter/emitter init

--- a/csp-apps/misp/pom.xml
+++ b/csp-apps/misp/pom.xml
@@ -17,6 +17,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>misp-adapter-emitter</module>
         <module>misp-client</module>
         <module>misp-commons</module>
         <module>misp-tests</module>
