--- a/csp-apps/misp/misp-commons/pom.xml
+++ b/csp-apps/misp/misp-commons/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>misp</artifactId>
+        <artifactId>parent-pom</artifactId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
