--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -46,9 +46,9 @@
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>il-commons</artifactId>
-			<version>3</version>
+			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
