--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>il-commons</artifactId>
 			<version>0.2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>il-client</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>misp-client</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
 	<build>
