--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -2,3 +2,10 @@ zeromq.protocol=tcp
 zeromq.host=localhost
 zeromq.port=50000
 zeromq.topic=misp_json
+
+misp.app.protocol = http
+misp.app.host = localhost
+misp.app.port = 8181
+misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
+
+misp.app.events.path=events
