--- a/csp-apps/misp/misp-client/pom.xml
+++ b/csp-apps/misp/misp-client/pom.xml
@@ -27,6 +27,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.intrasoft.csp</groupId>
+			<artifactId>misp-commons</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
