--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -46,17 +46,17 @@
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>il-commons</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>il-client</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.intrasoft.csp</groupId>
 			<artifactId>misp-client</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
     </dependencies>
 
