Elastic Search Client

--- a/csp-apps/integration-layer/il-client/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-client/src/main/resources/application.properties
@@ -20,3 +20,8 @@ tc.path.teams = /api/v1/teams
 anon.protocol = http
 anon.host = localhost
 anon.port:8085
+
+elastic.protocol=http
+elastic.host=csp0.dangerduck.gr
+elastic.port=9200
+elastic.path=cspdata/threat?pretty
