--- a/csp-apps/integration-layer/il-client/pom.xml
+++ b/csp-apps/integration-layer/il-client/pom.xml
@@ -35,6 +35,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>il-server</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
