--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -9,3 +9,39 @@ misp.app.port = 8181
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
 misp.app.events.path=events
+
+csp.retry.backOffPeriod=10
+csp.retry.maxAttempts=1
+server.protocol=http
+server.host=localhost
+server.port=8081
+
+csp.client.ssl.enabled = false
+csp.client.ssl.jks.keystore = classpath:cps-internal.jks
+csp.client.ssl.jks.keystore.password = 123456
+
+csp.server.protocol = http
+csp.server.host = localhost
+csp.server.port = 8081
+
+adapter.server.protocol = http
+adapter.server.host = localhost
+adapter.server.port = 3001
+
+
+tc.protocol = http
+tc.host = localhost
+tc.port = 8081
+tc.path.circles = /api/v1/circles
+tc.path.teams = /api/v1/teams
+
+anon.protocol = http
+anon.host = localhost
+anon.port:8085
+
+server.name = LOCAL-CERT
+
+elastic.host = ${ES_LOCAL_DOMAIN}
+elastic.path = ${ES_PATH_BASE}
+elastic.protocol = https4-in
+elastic.port = ${ES_PORT}
