Resolved cyclic bean dependency (PasswordEncoder)

--- a/vcbridge-admin/application/src/main/resources/application.properties
+++ b/vcbridge-admin/application/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=8080
-pospring.datasource.url=jdbc:postgresql://localhost/vcbridge
-spring.datasource.username=admin
-spring.datasource.password=
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:15432/vcbridge
+spring.datasource.username=postgres
+spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 
 spring.mvc.static-path-pattern=/resources/**
 #openfire.test=dimis
@@ -34,4 +37,4 @@ spring.mail.properties.mail.smtp.socketFactory.port=587
 #timezone.default=Europe/Athens
 
 security.basic.enabled=false
-enable.oam=true
+enable.oam=false
