MISP Emitter/Adapter

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 zeromq.protocol=tcp
-zeromq.host=csp-misp
+zeromq.host=misp-ui.demo1-csp.athens.intrasoft-intl.private
 zeromq.port=50000
 zeromq.topic=misp_json
 
@@ -8,7 +8,41 @@ misp.app.host = localhost
 misp.app.port = 8181
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+
 misp.app.events.path=events
+
+csp.retry.backOffPeriod=10
+csp.retry.maxAttempts=1
+server.protocol=http
+server.host=localhost
+server.port=8081
+
+csp.client.ssl.enabled = true
+csp.client.ssl.jks.keystore = classpath:cps-internal.jks
+csp.client.ssl.jks.keystore.password = 123456
+
+csp.server.protocol = https
+csp.server.host = integration.${LOCAL_DOMAIN}
+csp.server.port = 8081
+
+adapter.server.protocol = http
+adapter.server.host = integration.${LOCAL_DOMAIN}
+adapter.server.port = 3001
+
+
+tc.protocol = http
+tc.host = localhost
+tc.port = 8081
+tc.path.circles = /api/v1/circles
+tc.path.teams = /api/v1/teams
+
+anon.protocol = http
+anon.host = localhost
+anon.port:8085
 
 server.name = ${CSP_NAME}
 
