--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -8,6 +8,11 @@ misp.app.host = localhost
 misp.app.port = 8181
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+
 misp.app.events.path=events
 
 csp.retry.backOffPeriod=10
@@ -28,6 +33,10 @@ adapter.server.protocol = http
 adapter.server.host = localhost
 adapter.server.port = 3001
 
+emitter.server.protocol = http
+emitter.server.host = localhost
+emitter.server.port = 3001
+
 
 tc.protocol = http
 tc.host = localhost
@@ -41,7 +50,14 @@ anon.port:8085
 
 server.name = LOCAL-CERT
 
-elastic.host = ${ES_LOCAL_DOMAIN}
-elastic.path = ${ES_PATH_BASE}
-elastic.protocol = https4-in
-elastic.port = ${ES_PORT}
+elastic.host=csp0.dangerduck.gr
+elastic.path=
+elastic.protocol=http
+elastic.port=9200
+
+apache.camel.use.activemq=false
+
+#
+#logging.level.root=DEBUG
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
