--- a/csp-apps/misp/misp-adapter-emitter/pom.xml
+++ b/csp-apps/misp/misp-adapter-emitter/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>com.intrasoft.csp</groupId>
-		<artifactId>parent-pom</artifactId>
+		<artifactId>misp</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
 	</parent>
 
