--- a/csp-apps/misp/misp-tests/pom.xml
+++ b/csp-apps/misp/misp-tests/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.intrasoft.csp</groupId>
-        <artifactId>parent-pom</artifactId>
+        <artifactId>misp</artifactId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
 
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
             <artifactId>misp-client</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.intrasoft.csp</groupId>
+            <artifactId>misp-adapter-emitter</artifactId>
             <version>0.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
