MISP set zeromqhost for docker

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 zeromq.protocol=tcp
-zeromq.host=misp-ui.demo1-csp.athens.intrasoft-intl.private
+zeromq.host=misp-ui.${LOCAL_DOMAIN}
 zeromq.port=50000
 zeromq.topic=misp_json
 
