--- a/csp-apps/misp/misp-tests/pom.xml
+++ b/csp-apps/misp/misp-tests/pom.xml
@@ -21,17 +21,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.intrasoft.csp</groupId>
-            <artifactId>misp-client</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.intrasoft.csp</groupId>
             <artifactId>misp-adapter-emitter</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
