--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.protocol=http
+server.host=localhost
+server.port=8081
+security.basic.enabled=false
+
 zeromq.protocol=tcp
 zeromq.host=localhost
 zeromq.port=50000
@@ -17,9 +22,6 @@ misp.app.events.path=events
 
 csp.retry.backOffPeriod=10
 csp.retry.maxAttempts=1
-server.protocol=http
-server.host=localhost
-server.port=8081
 
 csp.client.ssl.enabled = false
 csp.client.ssl.jks.keystore = classpath:cps-internal.jks
