docker env properties fixes

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 zeromq.protocol=tcp
-zeromq.host=misp-ui.${LOCAL_DOMAIN}
+zeromq.host=${MISP_LOCAL_DOMAIN}
 zeromq.port=50000
 zeromq.topic=misp_json
 
@@ -22,7 +22,7 @@ server.host=localhost
 server.port=8081
 
 csp.client.ssl.enabled = true
-csp.client.ssl.jks.keystore = classpath:cps-internal.jks
+csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 csp.client.ssl.jks.keystore.password = 123456
 
 csp.server.protocol = https
