IL: Update environmental vars used for MISP

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -76,10 +76,10 @@ viper.port = ${VIPER_PORT}
 viper.host = ${VIPER_LOCAL_DOMAIN}
 viper.path = ${VIPER_PATH}
 
-misp.protocol = ${MISP_PROTOCOL}
-misp.port = ${MISP_PORT}
-misp.host = ${MISP_LOCAL_DOMAIN}
-misp.path = ${MISP_PATH}
+misp.protocol = ${MISP_ADAPTER_PROTOCOL}
+misp.port = ${MISP_ADAPTER_PORT}
+misp.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
+misp.path = ${MISP_ADAPTER_PATH}
 
 taranis.protocol = ${TARANIS_PROTOCOL}
 taranis.port = ${TARANIS_PORT}
