MISP: fix MispClient and reemittion

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -23,15 +23,15 @@ server.port=8081
 
 csp.client.ssl.enabled = true
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
-csp.client.ssl.jks.keystore.password = 123456
+csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
 csp.server.protocol = https
 csp.server.host = integration.${LOCAL_DOMAIN}
 csp.server.port = 8081
 
-adapter.server.protocol = http
-adapter.server.host = integration.${LOCAL_DOMAIN}
-adapter.server.port = 3001
+adapter.server.protocol = https
+adapter.server.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
+adapter.server.port = 443
 
 
 tc.protocol = http
