--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -24,8 +24,8 @@ csp.retry.backOffPeriod=10
 csp.retry.maxAttempts=1
 
 csp.client.ssl.enabled = false
-csp.client.ssl.jks.keystore = classpath:cps-internal.jks
-csp.client.ssl.jks.keystore.password = 123456
+csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
 csp.server.protocol = http
 csp.server.host = localhost
@@ -53,7 +53,8 @@ anon.port:8085
 server.name = LOCAL-CERT
 
 elastic.host=csp0.dangerduck.gr
-elastic.path=cspdata/
+elastic.path=
+elastic.path.cspdata=cspdata/
 elastic.protocol=http
 elastic.port=9200
 
