--- a/csp-apps/misp/misp-client/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-client/src/main/resources/application.properties
@@ -3,4 +3,8 @@ misp.app.host = localhost
 misp.app.port = 8181
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
+csp.client.ssl.enabled = true
+csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+
 misp.app.events.path=events
