Clean up application.properties on misp-adapter

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -1,52 +1,52 @@
-zeromq.protocol=tcp
-zeromq.host=${MISP_LOCAL_DOMAIN}
-zeromq.port=50000
-zeromq.topic=misp_json
+server.port=${MISP_ADAPTER_DOCR_PORT}
 
-misp.app.protocol = http
-misp.app.host = localhost
-misp.app.port = 8181
-misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
-
+h2.db.file = ${MISP-ADAPTER_PATH_REPO:/opt/misp-adapter/data}
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:${h2.db.file};DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
-misp.app.events.path=events
 
-csp.retry.backOffPeriod=10
-csp.retry.maxAttempts=1
-server.protocol=http
-server.host=localhost
-server.port=8081
-
+## IL
+csp.server.protocol = https
 csp.client.ssl.enabled = true
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+csp.server.host = ${IL_LOCAL_DOMAIN}
+csp.server.port = ${IL_PORT}
+csp.retry.backOffPeriod=10
+csp.retry.maxAttempts=1
 
-csp.server.protocol = https
-csp.server.host = integration.${LOCAL_DOMAIN}
-csp.server.port = 8081
+## Misp
+misp.app.protocol = https
+misp.app.host = ${MISP_LOCAL_DOMAIN}
+misp.app.port = 443
+misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
+misp.app.events.path=${MISP_PATH_EVENTS}
+zeromq.protocol=tcp
+zeromq.host=${MISP_DOCR_HOST}
+zeromq.port=50000
+zeromq.topic=misp_json
 
+## MISP Adapter
 adapter.server.protocol = https
 adapter.server.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
 adapter.server.port = 443
 
+## TC
+tc.protocol = https
+tc.host = ${TC_LOCAL_DOMAIN}
+tc.port = ${TC_PORT}
+tc.path.circles = ${TC_PATH_CIRCLES}
+tc.path.teams = ${TC_PATH_TEAMS}
 
-tc.protocol = http
-tc.host = localhost
-tc.port = 8081
-tc.path.circles = /api/v1/circles
-tc.path.teams = /api/v1/teams
+## ANON
+anon.protocol = https
+anon.host = ${ANON_LOCAL_DOMAIN}
+anon.port=${ANON_PORT}
 
-anon.protocol = http
-anon.host = localhost
-anon.port:8085
-
-server.name = ${CSP_NAME}
-
+## ES
+elastic.protocol = https
 elastic.host = ${ES_LOCAL_DOMAIN}
 elastic.path = ${ES_PATH_BASE}
-elastic.protocol = https4-in
 elastic.port = ${ES_PORT}
