SXCSP-349: Make CamelRestService support by default asyn requests (use the application property server.camel.rest.service.is.async=false if you want to have the initial behavior )

--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -13,6 +13,8 @@ server.ssl.allow.all.hostname = true
 
 server.subdomain.prefix = integration
 
+server.camel.rest.service.is.async = true
+
 spring.jackson.date-format= yyyy-MM-dd'T'HH:mm:ssZ
 
 embedded.activemq.start = false
