MISP: Take the server name from env var

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -1,3 +1,6 @@
+#take the server name from env var
+server.name = ${CSP_NAME}
+
 server.port=${MISP_ADAPTER_DOCR_PORT}
 
 h2.db.file = ${MISP-ADAPTER_PATH_REPO:/opt/misp-adapter/data}
