MISP: Remove env var from default application properties

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -25,7 +25,7 @@ csp.retry.maxAttempts=1
 
 csp.client.ssl.enabled = false
 csp.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
-csp.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
+csp.client.ssl.jks.keystore.password = 123456
 
 csp.server.protocol = http
 csp.server.host = localhost
