--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -31,6 +31,10 @@ zeromq.host=${MISP_DOCR_HOST}
 zeromq.port=50000
 zeromq.topic=misp_json
 
+misp.ui.protocol = https
+misp.ui.host = ${MISP_DOMAIN}
+misp.ui.port = 443
+
 ## MISP Adapter
 adapter.server.protocol = https
 adapter.server.host = ${MISP_ADAPTER_LOCAL_DOMAIN}
@@ -53,3 +57,6 @@ elastic.protocol = https
 elastic.host = ${ES_LOCAL_DOMAIN}
 elastic.path = ${ES_PATH_BASE}
 elastic.port = ${ES_PORT}
+
+
+spring.h2.console.enabled=true
