MISP: merge RTIR with last changes

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -53,7 +53,7 @@ anon.port:8085
 server.name = LOCAL-CERT
 
 elastic.host=csp0.dangerduck.gr
-elastic.path=
+elastic.path=cspdata/
 elastic.path.cspdata=cspdata/
 elastic.protocol=http
 elastic.port=9200
