--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -13,9 +13,11 @@ misp.app.host = localhost
 misp.app.port = 8181
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
-misp.ui.protocol = https
-misp.ui.host = localhost
-misp.ui.port = 443
+misp.ui.protocol = http
+#misp.ui.host = localhost
+misp.ui.host = misp.dimitris.dk
+#misp.ui.port = 443
+misp.ui.port = 80
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
