Update application properties so AppProcessor can send specific dataTypes to the corresponding internal apps

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -28,16 +28,16 @@ anon.server.host = ${ANON_LOCAL_DOMAIN}
 # CSP Application data type flows
 # ----------------------------------------
 
-internal.event.apps = ${IL_IN_EVENT_APPS:misp}
-internal.threat.apps = ${IL_IN_THREAT_APPS:misp}
+internal.event.apps = ${IL_IN_EVENT_APPS:misp, rt}
+internal.threat.apps = ${IL_IN_THREAT_APPS:misp, rt}
 internal.incident.apps = ${IL_IN_INCIDENT_APPS:rt, intelmq}
 internal.vulnerability.apps = ${IL_IN_VULNERABILITY_APPS:taranis, misp}
-internal.artefact.apps =${IL_IN_ARTEFACT_APPS:misp, viper}
+internal.artefact.apps =${IL_IN_ARTEFACT_APPS: viper}
 internal.trustcircle.apps = ${IL_IN_TRUSTCIRCLE_APPS:trustcircle}
 
 external.event.apps = ${IL_EX_EVENT_APPS:misp}
 external.threat.apps = ${IL_EX_THREAT_APPS:misp}
-external.incident.apps = ${IL_EX_INCIDENT_APPS:intelmq}
+external.incident.apps = ${IL_EX_INCIDENT_APPS:rt}
 external.vulnerability.apps = ${IL_EX_VULNERABILITY_APPS:taranis}
 external.artefact.apps = ${IL_EX_ARTEFACT_APPS:viper}
 external.trustcircle.apps = ${IL_EX_TRUSTCIRCLE_APPS:trustcircle}
