--- a/csp-apps/integration-layer/il-server/src/main/resources/application.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application.properties
@@ -80,16 +80,16 @@ anon.server.port:8085
 
 # app names should exist as first prefix in CSP APPLICATIONs Properties
 
-internal.event.apps = misp
-internal.threat.apps = misp
-internal.incident.apps = rt, intelmq 
+internal.event.apps = misp, rt
+internal.threat.apps = misp, rt
+internal.incident.apps = rt, intelmq
 internal.vulnerability.apps = taranis, misp
-internal.artefact.apps = misp, viper
+internal.artefact.apps = viper
 internal.trustcircle.apps = trustcircle
 
 external.event.apps = misp
 external.threat.apps = misp
-external.incident.apps = intelmq
+external.incident.apps = rt
 external.vulnerability.apps = taranis 
 external.artefact.apps = viper
 external.trustcircle.apps = trustcircle
