Refactoring of IL:TrustCirclesClient to support all methods needed by misp-java-app + unit test

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -46,6 +46,8 @@ tc.host = ${TC_LOCAL_DOMAIN}
 tc.port = ${TC_PORT}
 tc.path.circles = ${TC_PATH_CIRCLES}
 tc.path.teams = ${TC_PATH_TEAMS}
+tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
 ## ANON
 anon.protocol = https
