--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -51,6 +51,8 @@ tc.host = localhost
 tc.port = 8081
 tc.path.circles = /api/v1/circles
 tc.path.teams = /api/v1/teams
+tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+tc.client.ssl.jks.keystore.password = 123456
 
 anon.protocol = http
 anon.host = localhost
