MISP: Starting implementation on MispTcService

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -19,6 +19,9 @@ misp.ui.host = misp.dimitris.dk
 #misp.ui.port = 443
 misp.ui.port = 80
 
+misp.sync.fixed.delay=60000
+misp.sync.initial.delay=60000
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
