Bug fix RTIR resolving

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -4,13 +4,14 @@ server.port=8081
 security.basic.enabled=false
 
 zeromq.protocol=tcp
-zeromq.host=localhost
+#zeromq.host=localhost
+zeromq.host=misp.dimitris.dk
 zeromq.port=50000
 zeromq.topic=misp_json
 
 misp.app.protocol = http
-misp.app.host = localhost
-misp.app.port = 8181
+misp.app.host = misp.dimitris.dk
+misp.app.port = 80
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
 misp.ui.protocol = http
