Update misp-tc-properties so they could be used in mock and live environment

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application-docker.properties
@@ -43,9 +43,10 @@ adapter.server.port = 443
 ## TC
 tc.protocol = https
 tc.host = ${TC_LOCAL_DOMAIN}
-tc.port = ${TC_PORT}
+tc.port = 443
 tc.path.circles = ${TC_PATH_CIRCLES}
 tc.path.teams = ${TC_PATH_TEAMS}
+tc.client.ssl.enabled=true
 tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
 tc.client.ssl.jks.keystore.password = ${IL_SSL_KEYSTORE_PASS}
 
