--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -50,12 +50,15 @@ emitter.server.host = localhost
 emitter.server.port = 3001
 
 
-tc.protocol = http
+# Using properties for a mocked TC nodejs server you can start under dummyserver project
+# You can override them to what ever is applicable - see docker profile for our docker env
+tc.protocol = https
 tc.host = localhost
-tc.port = 8081
-tc.path.circles = /api/v1/circles
-tc.path.teams = /api/v1/teams
-tc.client.ssl.jks.keystore = file:/opt/ssl/server/csp-internal.jks
+tc.port = 9000
+tc.path.circles = /tc
+tc.path.teams = /tct
+tc.client.ssl.enabled=true
+tc.client.ssl.jks.keystore = classpath:sslcert/csp-internal.jks
 tc.client.ssl.jks.keystore.password = 123456
 
 anon.protocol = http
