MISP: local/remote org fix in sync service, populating sh. params in emitter

--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -5,12 +5,14 @@ security.basic.enabled=false
 
 zeromq.protocol=tcp
 #zeromq.host=localhost
-zeromq.host=misp.dimitris.dk
+# zeromq.host=misp.dimitris.dk
+zeromq.host=192.168.56.50
 zeromq.port=50000
 zeromq.topic=misp_json
 
 misp.app.protocol = http
-misp.app.host = misp.dimitris.dk
+#misp.app.host = misp.dimitris.dk
+misp.app.host = 192.168.56.50
 misp.app.port = 80
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
