--- a/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
+++ b/csp-apps/misp/misp-adapter-emitter/src/main/resources/application.properties
@@ -5,14 +5,12 @@ security.basic.enabled=false
 
 zeromq.protocol=tcp
 #zeromq.host=localhost
-# zeromq.host=misp.dimitris.dk
-zeromq.host=192.168.56.50
+zeromq.host=misp.dimitris.dk
 zeromq.port=50000
 zeromq.topic=misp_json
 
 misp.app.protocol = http
-#misp.app.host = misp.dimitris.dk
-misp.app.host = 192.168.56.50
+misp.app.host = misp.dimitris.dk
 misp.app.port = 80
 misp.app.authorization.key=JNqWBxfPiIywz7hUe58MyJf6sD5PrTVaGm7hTn6c
 
@@ -22,6 +20,8 @@ misp.ui.host = misp.dimitris.dk
 #misp.ui.port = 443
 misp.ui.port = 80
 
+misp.sync.prefix = CSP::
+misp.sync.type = CspOrg
 misp.sync.enabled = false
 misp.sync.fixed.delay=60000
 misp.sync.initial.delay=60000
