--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -14,8 +14,8 @@
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Configuration Service CSP Application</name>
-	<description>Configuration Application for CSP installations</description>
+	<name>Configuration Service CSP Installer</name>
+	<description>Configuration Installer for CSP installations</description>
 
 
 	<properties>
