Update docker default rt properties

--- a/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
+++ b/csp-apps/integration-layer/il-server/src/main/resources/application-cspenv.properties
@@ -91,7 +91,7 @@ intelmq.port = ${INTELMQ_PORT}
 intelmq.host = ${INTELMQ_LOCAL_DOMAIN}
 intelmq.path = ${INTELMQ_PATH}
 
-rt.protocol = ${RT_PROTOCOL}
-rt.port = ${RT_PORT}
-rt.host = ${RT_LOCAL_DOMAIN}
-rt.path = ${RT_PATH}
+rt.protocol = ${RT_ADAPTER_PROTOCOL}
+rt.port = ${RT_ADAPTER_PORT}
+rt.host = ${RT_ADAPTER_LOCAL_DOMAIN}
+rt.path = ${RT_ADAPTER_PATH}
